2009-09-15  Ingo Feinerer  <feinerer@logic.at>

	* R/preprocess.R (preprocessReut21578XML): Fix generated file names.

2009-09-06  Ingo Feinerer  <feinerer@logic.at>

	* R/: Use S3 instead of S4 class system.

2009-08-11  Ingo Feinerer  <feinerer@logic.at>

	* R/reader.R (readMail): Moved to tm.plugin.mail package.

2009-07-04  Ingo Feinerer  <feinerer@logic.at>

	* R/reader.R (readNewsgroup): Rename to readMail as newsgroup
	postings are basically e-mails with some extra headers.

2009-07-03  Ingo Feinerer  <feinerer@logic.at>

	* R/transform.R: Move convertMboxEml, removeCitation,
	removeMultipart, and removeSignature to the tm.plugin.mail package
	since they are mainly utility functions (for handling e-mails) and
	not very framework specific.

2009-06-28  Ingo Feinerer  <feinerer@logic.at>

	* man/: Fix documentation.

2009-06-26  Ingo Feinerer  <feinerer@logic.at>

	* R/reader.R (readReut21578XMLasPlain): New reader which returns a
	plain text document instead of an XML document for texts of the
	Reuters-21578 dataset.

	* R/sparse.R: Removed since the slam package is now available on
	CRAN.

	* DESCRIPTION (Depends): Add slam package.

2009-06-17  Ingo Feinerer  <feinerer@logic.at>

	* R/transform.R (stemDoc): Fix character(0) handling.

2009-06-12  Ingo Feinerer  <feinerer@logic.at>

	* R/doc.R (show): Pretty print.

2009-05-27  Ingo Feinerer  <feinerer@logic.at>

	* R/matrix.R (print.TermDocumentMatrix): Handle empty matrices
	gracefully.

2009-05-13  Ingo Feinerer  <feinerer@logic.at>

	* R/corpus.R: Make corpus virtual. Implement corpus with standard
	and permanent storage semantics.

	* DESCRIPTION: New major release. A *lot* of improvements.

2009-05-04   Ingo Feinerer <feinerer@logic.at>

	* NAMESPACE: Export some simple_triplet_matrix functions.

2009-04-28   Ingo Feinerer <feinerer@logic.at>

	* R/weight.R: Adapt tf-idf to new matrix format.

2009-04-27  Ingo Feinerer  <feinerer@logic.at>
