@@ -4,14 +4,6 @@
 library("tm")
 data("acq")
 
-# Sources and readers
-rdf <- system.file("texts", "gmane.comp.lang.r.gr.rdf", package = "tm")
-reut21578 <- system.file("texts", "reut21578", package = "tm")
-rcv1 <- system.file("texts", "rcv1", package = "tm")
-g <- Corpus(GmaneSource(rdf), readerControl = list(reader = readGmane))
-re <- Corpus(DirSource(reut21578), readerControl = list(reader = readReut21578XML))
-rc <- Corpus(DirSource(rcv1), readerControl = list(reader = readRCV1))
-
 # Lazy transformations
 acq <- tm_map(acq, stemDocument, lazy = TRUE)
 CMetaData(acq)
